# fw

./: .gitmodules  CMakeLists.txt  fw_define.h  fw_uart.c  fw_upg.c  fw_upg.h  lua_fw.c  main.c  test.lua
lfk/fw0/: fw0_define.h  fw0_upgrade.c  fw0_upgrade.h
